Add layer code in from Rob Allen's example

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 /.idea/
 /vendor/
 
-composer.lock
+/composer.lock
 
-/layer/*
-!/layer/.gitkeep
-
+/layer/composer.lock
+/layer/php
+/layer/vendor/
