--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "license": "MIT",
     "minimum-stability": "stable",
     "require": {
+        "php": "^7.1",
         "roave/security-advisories": "dev-master@dev",
         "symfony/console": "^4.3"
     },
